--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
   "passport-local": "^1.0.0",
   
     
-  "socket.io": "^4.5.4"
+  "socket.io": "^4.5.4",
+  
+    
+  "ws": "^8.12.0"
   
   }
 }
