--- a/process.env
+++ b/process.env
@@ -1,2 +1,3 @@
-MONGOLAB_URI = mongodb+srv://tuo:hVcEyGxXnNw1bb6S@cluster0.6wcynnf.mongodb.net/?retryWrites=true&w=majority
+MONGOLAB_URI = mongodb+srv://kalifa:7uhUzay4Jsnc9EDG@cluster0.26jr5r9.mongodb.net/?retryWrites=true&w=majority
+
 PORT = 5502 
